--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "global-fishing-watch",
   "version": "1.0.0",
   "description": "This repository will host the Global Fishing Watch client application developed by Vizzuality",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,23 @@
   "bugs": {
     "url": "https://github.com/Vizzuality/GlobalFishingWatch/issues"
   },
-  "homepage": "https://github.com/Vizzuality/GlobalFishingWatch#readme"
+  "homepage": "https://github.com/Vizzuality/GlobalFishingWatch#readme",
+  "dependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "dotenv": "^2.0.0",
+    "koa": "^1.2.0",
+    "koa-static": "^2.0.0",
+    "koa-webpack-dev-middleware": "^1.2.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.4",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
+    "webpack": "^1.13.0"
+  }
 }
