--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This repository will host the Global Fishing Watch client application developed by Vizzuality",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "build": "NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +27,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "dotenv": "^2.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "koa": "^1.2.0",
     "koa-static": "^2.0.0",
     "koa-webpack-dev-middleware": "^1.2.1",
@@ -35,6 +38,14 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "whatwg-fetch": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "html-webpack-plugin": "^2.19.0",
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0"
   }
 }
