--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa": "^1.2.0",
     "koa-static": "^2.0.0",
     "koa-webpack-dev-middleware": "^1.2.1",
+    "lodash": "^4.13.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
