--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.13.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
