--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
     "html-webpack-plugin": "^2.19.0",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0"
+  },
+  "engines": {
+    "node": "5.10.x",
+    "npm": "3.8.x"
   }
 }
