--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.13.0",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "html-webpack-plugin": "^2.19.0"
   },
   "devDependencies": {
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "html-webpack-plugin": "^2.19.0",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0"
   },
