--- a/package.json
+++ b/package.json
@@ -22,14 +22,22 @@
   },
   "homepage": "https://github.com/Vizzuality/GlobalFishingWatch#readme",
   "dependencies": {
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.19.0",
     "jade": "^1.11.0",
+    "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
     "morgan": "^1.7.0",
+    "node-sass": "^3.7.0",
     "pretty-error": "^2.0.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
@@ -39,17 +47,6 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "webpack": "^1.13.0",
-    "html-webpack-plugin": "^2.19.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
