--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.13.0",
-    "html-webpack-plugin": "^2.19.0"
+    "html-webpack-plugin": "^2.19.0",
+    "basic-auth-connect": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
