--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.23.1",
@@ -50,8 +51,8 @@
     "sass-loader": "^3.2.0",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "xo": "^0.16.0",
-    "basic-auth-connect": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "xo": "^0.16.0"
   },
   "engines": {
     "node": "5.10.x",
@@ -60,15 +61,23 @@
   "xo": {
     "esnext": true,
     "space": 2,
-    "ignores": ["app/**"],
+    "ignores": [
+      "app/**"
+    ],
     "rules": {
-      "space-before-function-paren": ["error", {
-        "anonymous": "never",
-        "named": "never"
-      }],
-      "camelcase": ["error", {
-        "properties": "never"
-      }]
+      "space-before-function-paren": [
+        "error",
+        {
+          "anonymous": "never",
+          "named": "never"
+        }
+      ],
+      "camelcase": [
+        "error",
+        {
+          "properties": "never"
+        }
+      ]
     }
   }
 }
