--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.19.0",
+    "image-webpack-loader": "^2.0.0",
     "jade": "^1.11.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
