--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pretty-error": "^2.0.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-draggable": "^2.1.2",
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
