--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-webpack-plugin": "^2.19.0",
     "image-webpack-loader": "^2.0.0",
     "jade": "^1.11.0",
+    "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
     "morgan": "^1.7.0",
@@ -49,9 +50,11 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
+    "react-slick": "^0.12.2",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
+    "slick-carousel": "^1.6.0",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
     "whatwg-fetch": "^1.0.0",
