add accordion and new styles [WIP]

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^15.0.2",
     "react-draggable": "^2.1.2",
     "react-google-maps": "^4.11.0",
+    "react-native-accordion": "^1.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
