--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^5.2.2"
+    "eslint-plugin-react": "^5.2.2",
+    "sass-lint": "^1.8.2"
   },
   "engines": {
     "node": "5.10.x",
