--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "This repository will host the Global Fishing Watch client application developed by Vizzuality",
   "main": "server.js",
   "scripts": {
-    "test": "npm run lint-sass && npm run lint-js",
+    "test": "npm run lint-js || npm run lint-sass",
     "lint-sass": "sass-lint -v -q 'app/**/*.scss'",
-    "lint-js": "eslint -c .eslintrc app'",
+    "lint-js": "eslint -c .eslintrc app",
     "build": "webpack --config ./config/webpack.config.js --progress --profile --colors",
     "postinstall": "npm run build"
   },
