--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "slick-carousel": "^1.6.0",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "svg-react-loader": "^0.3.7"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
@@ -70,8 +71,7 @@
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^5.2.2",
-    "sass-lint": "^1.8.2",
-    "svg-react-loader": "^0.3.7"
+    "sass-lint": "^1.8.2"
   },
   "engines": {
     "node": "5.10.x",
