--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
     "slick-carousel": "^1.6.0",
+    "svg-react-loader": "^0.3.7",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "whatwg-fetch": "^1.0.0",
-    "svg-react-loader": "^0.3.7"
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
