--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "morgan": "^1.7.0",
     "node-sass": "^3.7.0",
     "pretty-error": "^2.0.0",
-    "react": "^15.0.2",
+    "react": "^15.2.0",
     "react-addons-create-fragment": "^15.3.0",
     "react-datepicker": "^0.28.2",
     "react-dom": "^15.0.2",
@@ -68,8 +68,11 @@
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.3.7",
     "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "svg-react-loader": "^0.3.7",
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.1",
+    "resolve-url-loader": "1.6.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
