--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   },
   "globals": {
     "google": true,
-    "cartodb": true
+    "cartodb": true,
+    "API_URL": true
   },
   "parserOptions": {
     "ecmaVersion": 7,
