--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.5.0",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.15.1",
+    "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.23.1",
     "d3": "^4.0.0-rc.2",
@@ -61,13 +62,11 @@
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
     "slick-carousel": "^1.6.0",
+    "style-loader": "^0.13.1",
     "svg-react-loader": "^0.3.7",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "whatwg-fetch": "^1.0.0",
-    "svg-react-loader": "^0.3.7",
-    "css-loader": "^0.23.1",
-    "style-loader": "^0.13.1"
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
