--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.19.0",
     "image-webpack-loader": "^2.0.0",
+    "iso-3166-1-alpha-2": "^1.0.0",
     "jade": "^1.11.0",
     "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
