--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "node-sass": "^3.7.0",
     "pretty-error": "^2.0.0",
     "react": "^15.0.2",
+    "react-addons-create-fragment": "^15.3.0",
     "react-datepicker": "^0.28.2",
     "react-dom": "^15.0.2",
     "react-google-maps": "^4.11.0",
     "react-native-accordion": "^1.0.0",
+    "react-paginate": "^2.1.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
@@ -62,13 +64,11 @@
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
     "slick-carousel": "^1.6.0",
+    "style-loader": "^0.13.1",
     "svg-react-loader": "^0.3.7",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "whatwg-fetch": "^1.0.0",
-    "svg-react-loader": "^0.3.7",
-    "css-loader": "^0.23.1",
-    "style-loader": "^0.13.1"
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
