--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,4 @@ GOOGLE_API_KEY=XXXXXXXX-XX
 NODE_ENV=development
 AUTH_USER=
 AUTH_PASSWORD=
-API_URL=
+API_URL=https://skytruth-pleuston.appspot.com/v1
