enforce css linter for edited/new files

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This repository will host the Global Fishing Watch client application developed by Vizzuality",
   "main": "server.js",
   "scripts": {
-    "test": "npm run lint-js || npm run lint-sass",
-    "lint-sass": "sass-lint -v -q 'app/**/*.scss'",
+    "test": "npm run lint-js && npm run lint-sass",
+    "lint-sass": "sass-lint -v -q `./scripts/get-scss-files-to-push.sh`",
     "lint-js": "eslint -c .eslintrc --ext .jsx,.js app",
     "build": "webpack --config ./config/webpack.config.js --progress --profile --colors",
     "postinstall": "npm run build"
