--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-google-maps": "^4.11.0",
     "react-native-accordion": "^1.0.0",
     "react-paginate": "^2.1.3",
+    "react-radio-group": "^3.0.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
