--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^5.2.2",
-    "sass-lint": "^1.8.2"
+    "sass-lint": "^1.8.2",
+    "webpack-dev-middleware": "^1.6.1"
   },
   "engines": {
     "node": "5.10.x",
