Add map embed; extract config vars

--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,10 @@ GOOGLE_API_KEY=XXXXXXXX-XX
 NODE_ENV=development
 AUTH_USER=
 AUTH_PASSWORD=
-API_URL=https://api-dot-world-fishing-827.appspot.com/v1
+EMBED_MAP_URL=
+MAP_API_ENDPOINT=https://api-dot-world-fishing-827.appspot.com
+BLOG_API_ENDPOINT=http://beta.globalfishingwatch.org
+FAQ_JSON_URL=/faq.json
+DEFINITIONS_JSON_URL=/definitions.json
+ART_PUB_JSON_URL=/articles-publications.json
+
