--- a/.env.sample
+++ b/.env.sample
@@ -5,7 +5,7 @@ AUTH_USER=
 AUTH_PASSWORD=
 EMBED_MAP_URL=
 MAP_API_ENDPOINT=https://api-dot-world-fishing-827.appspot.com
-BLOG_API_ENDPOINT=http://beta.globalfishingwatch.org
+BLOG_URL=http://skytruth.org/blogger_import_test/global-fishing-watch-blog
 FAQ_JSON_URL=/faq.json
 DEFINITIONS_JSON_URL=/definitions.json
 ART_PUB_JSON_URL=/articles-publications.json
