--- a/package.json
+++ b/package.json
@@ -60,20 +60,18 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
+    "react-router-scroll": "^0.3.2",
     "react-sanfona": "0.0.14",
     "react-slick": "^0.12.2",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "resolve-url-loader": "1.6.0",
     "sass-loader": "^3.2.0",
     "slick-carousel": "^1.6.0",
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.3.7",
     "webpack": "^1.13.0",
-    "whatwg-fetch": "^1.0.0",
-    "svg-react-loader": "^0.3.7",
-    "css-loader": "^0.23.1",
-    "style-loader": "^0.13.1",
-    "resolve-url-loader": "1.6.0"
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
