--- a/.env.sample
+++ b/.env.sample
@@ -9,4 +9,4 @@ BLOG_URL=http://skytruth.org/blogger_import_test/global-fishing-watch-blog
 FAQ_JSON_URL=/faq.json
 DEFINITIONS_JSON_URL=/definitions.json
 ART_PUB_JSON_URL=/articles-publications.json
-
+REQUIRE_MAP_LOGIN=true
