Extract home slider content to json

--- a/.env.sample
+++ b/.env.sample
@@ -9,5 +9,6 @@ BLOG_URL=http://skytruth.org/blogger_import_test/global-fishing-watch-blog
 FAQ_JSON_URL=/faq.json
 DEFINITIONS_JSON_URL=/definitions.json
 ART_PUB_JSON_URL=/articles-publications.json
+HOME_SLIDER_JSON_URL=/homeSlider.json
 REQUIRE_MAP_LOGIN=true
 GA_TRACKING_CODE=UA-XXXXXXXX-X
