--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "FAQ_JSON_URL": true,
     "DEFINITIONS_JSON_URL": true,
     "ART_PUB_JSON_URL": true,
+    "HOME_SLIDER_JSON_URL": true,
     "REQUIRE_MAP_LOGIN": true
   },
   "parserOptions": {
