implemented Google Analytics on page view

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ FAQ_JSON_URL=/faq.json
 DEFINITIONS_JSON_URL=/definitions.json
 ART_PUB_JSON_URL=/articles-publications.json
 REQUIRE_MAP_LOGIN=true
+GA_TRACKING_CODE=UA-XXXXXXXX-X
