--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "ga-react-router": "^2.1.1",
     "html-webpack-plugin": "^2.19.0",
     "image-webpack-loader": "^2.0.0",
     "iso-3166-1-alpha-2": "^1.0.0",
