--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,8 @@
 			"type": "image\/png"
 		}
 	],
-	"theme_color": "#ffffff",
-	"display": "standalone"
+	"theme_color": "#18306d",
+	"background_color": "#18306d",
+	"display": "standalone",
+	"start_url": "/"
 }
