Extract default workspace to env var

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "DEFINITIONS_JSON_URL": true,
     "ART_PUB_JSON_URL": true,
     "HOME_SLIDER_JSON_URL": true,
+    "DEFAULT_WORKSPACE": true,
     "REQUIRE_MAP_LOGIN": true
   },
   "parserOptions": {
