--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,4 @@ ART_PUB_JSON_URL=/articles-publications.json
 HOME_SLIDER_JSON_URL=/homeSlider.json
 REQUIRE_MAP_LOGIN=true
 GA_TRACKING_CODE=UA-XXXXXXXX-X
+DEFAULT_WORKSPACE=vizzuality-gfw-integration-default_v1.json
