--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "morgan": "^1.7.0",
     "node-sass": "^3.7.0",
     "pretty-error": "^2.0.0",
+    "promise-polyfill": "^6.0.2",
     "react": "^15.2.0",
     "react-addons-create-fragment": "^15.3.0",
     "react-datepicker": "^0.28.2",
