--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
     "node-sass": "^3.7.0",
+    "pixi.js": "^4.0.3",
     "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
     "react": "^15.2.0",
