--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Vizzuality/GlobalFishingWatch#readme",
   "dependencies": {
+    "autoprefixer": "^6.5.2",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
@@ -49,6 +50,7 @@
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
     "node-sass": "^3.7.0",
+    "postcss-loader": "^1.1.0",
     "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
     "react": "^15.2.0",
