Retrieves and resets the workspace

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,4 @@ HOME_SLIDER_JSON_URL=/homeSlider.json
 REQUIRE_MAP_LOGIN=true
 GA_TRACKING_CODE=UA-XXXXXXXX-X
 DEFAULT_WORKSPACE=vizzuality-gfw-integration-default_v1.json
+USE_LOCAL_WORKSPACE=true
