--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
     "node-sass": "^3.7.0",
+    "pixi.js": "^4.1.0",
     "postcss-loader": "^1.1.0",
     "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
@@ -58,6 +59,7 @@
     "react-datepicker": "^0.28.2",
     "react-dom": "^15.0.2",
     "react-google-maps": "^4.11.0",
+    "react-input-range": "^0.9.3",
     "react-native-accordion": "^1.0.0",
     "react-paginate": "^2.1.3",
     "react-radio-group": "^3.0.1",
@@ -75,8 +77,7 @@
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.3.7",
     "webpack": "^1.13.0",
-    "whatwg-fetch": "^1.0.0",
-    "pixi.js": "^4.1.0"
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
