Added webpack aliases

--- a/.eslintrc
+++ b/.eslintrc
@@ -40,5 +40,12 @@
     "max-len": ["error", 120],
     "react/prefer-stateless-function": "off",
     "no-underscore-dangle": 0
-  }
+  },
+  "settings": {
+      "import/resolver": {
+          "webpack": {
+            "config": "config/webpack.config.js"
+          }
+        }
+    }
 }
