--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "devDependencies": {
     "eslint": "^3.2.0",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^5.2.2",
