--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "react-router-scroll": "^0.3.2",
-    "react-sanfona": "0.0.15",
+    "react-sanfona": "daviferreira/react-sanfona#transitionfix",
     "react-slick": "^0.13.6",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
