--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,7 @@
     "HOME_SLIDER_JSON_URL": true,
     "DEFAULT_WORKSPACE": true,
     "REQUIRE_MAP_LOGIN": true,
-    "USE_LOCAL_WORKSPACE": true
+    "LOCAL_WORKSPACE": true
   },
   "parserOptions": {
     "ecmaVersion": 7,
