disable welcome modal with env var

--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,4 @@ REQUIRE_MAP_LOGIN=true
 GA_TRACKING_CODE=UA-XXXXXXXX-X
 DEFAULT_WORKSPACE=vizzuality-gfw-integration-default_v1.json
 LOCAL_WORKSPACE=/workspace.json
+DISABLE_WELCOME_MODAL=false
