--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "HOME_SLIDER_JSON_URL": true,
     "DEFAULT_WORKSPACE": true,
     "REQUIRE_MAP_LOGIN": true,
-    "LOCAL_WORKSPACE": true
+    "LOCAL_WORKSPACE": true,
+    "DISABLE_WELCOME_MODAL": true
   },
   "parserOptions": {
     "ecmaVersion": 7,
