--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-input-range": "^0.9.3",
     "react-paginate": "^4.1.1",
     "react-redux": "^4.4.5",
+    "react-responsive": "^1.2.6",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "react-router-scroll": "^0.3.2",
