--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,4 @@ GA_TRACKING_CODE=UA-XXXXXXXX-X
 DEFAULT_WORKSPACE=vizzuality-gfw-integration-default_v1.json
 LOCAL_WORKSPACE=/workspace.json
 DISABLE_WELCOME_MODAL=false
+WELCOME_MODAL_COOKIE_KEY=
