--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
     "DEFAULT_WORKSPACE": true,
     "REQUIRE_MAP_LOGIN": true,
     "LOCAL_WORKSPACE": true,
-    "DISABLE_WELCOME_MODAL": true
+    "DISABLE_WELCOME_MODAL": true,
+    "WELCOME_MODAL_COOKIE_KEY": true
   },
   "parserOptions": {
     "ecmaVersion": 7,
