Fix header and footer links; fix report form

--- a/.env.sample
+++ b/.env.sample
@@ -5,11 +5,8 @@ AUTH_USER=
 AUTH_PASSWORD=
 EMBED_MAP_URL=
 MAP_API_ENDPOINT=https://api-dot-world-fishing-827.appspot.com
+SITE_URL=http://globalfishingwatch.org/
 BLOG_URL=http://blog.globalfishingwatch.org/
-FAQ_JSON_URL=/faq.json
-DEFINITIONS_JSON_URL=/definitions.json
-ART_PUB_JSON_URL=/articles-publications.json
-HOME_SLIDER_JSON_URL=/homeSlider.json
 REQUIRE_MAP_LOGIN=true
 GA_TRACKING_CODE=UA-XXXXXXXX-X
 DEFAULT_WORKSPACE=vizzuality-gfw-integration-default_v1.json
