--- a/.eslintrc
+++ b/.eslintrc
@@ -11,10 +11,7 @@
     "EMBED_MAP_URL": true,
     "MAP_API_ENDPOINT": true,
     "BLOG_URL": true,
-    "FAQ_JSON_URL": true,
-    "DEFINITIONS_JSON_URL": true,
-    "ART_PUB_JSON_URL": true,
-    "HOME_SLIDER_JSON_URL": true,
+    "SITE_URL": true,
     "DEFAULT_WORKSPACE": true,
     "REQUIRE_MAP_LOGIN": true,
     "LOCAL_WORKSPACE": true,
