--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "SITE_URL": true,
     "DEFAULT_WORKSPACE": true,
     "REQUIRE_MAP_LOGIN": true,
+    "GA_TRACKING_CODE": true,
     "LOCAL_WORKSPACE": true,
     "DISABLE_WELCOME_MODAL": true,
     "WELCOME_MODAL_COOKIE_KEY": true
