--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-addons-create-fragment": "^15.3.0",
     "react-datepicker": "^0.28.2",
     "react-dom": "^15.0.2",
+    "react-ga": "^2.1.2",
     "react-google-maps": "^4.11.0",
     "react-input-range": "^0.9.3",
     "react-paginate": "^4.1.1",
