--- a/.eslintrc
+++ b/.eslintrc
@@ -11,12 +11,10 @@
     "EMBED_MAP_URL": true,
     "MAP_API_ENDPOINT": true,
     "BLOG_URL": true,
-    "FAQ_JSON_URL": true,
-    "DEFINITIONS_JSON_URL": true,
-    "ART_PUB_JSON_URL": true,
-    "HOME_SLIDER_JSON_URL": true,
+    "SITE_URL": true,
     "DEFAULT_WORKSPACE": true,
     "REQUIRE_MAP_LOGIN": true,
+    "GA_TRACKING_CODE": true,
     "LOCAL_WORKSPACE": true,
     "DISABLE_WELCOME_MODAL": true,
     "WELCOME_MODAL_COOKIE_KEY": true
