--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,4 @@ DEFAULT_WORKSPACE=vizzuality-gfw-integration-default_v1.json
 LOCAL_WORKSPACE=/workspace.json
 DISABLE_WELCOME_MODAL=false
 WELCOME_MODAL_COOKIE_KEY=
+TIMEBAR_DATA_URL=
