--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "GA_TRACKING_CODE": true,
     "LOCAL_WORKSPACE": true,
     "DISABLE_WELCOME_MODAL": true,
-    "WELCOME_MODAL_COOKIE_KEY": true
+    "WELCOME_MODAL_COOKIE_KEY": true,
+    "TIMEBAR_DATA_URL": true
   },
   "parserOptions": {
     "ecmaVersion": 7,
