Feature/map conditional render (#555)
* Remove site code

* Fix header and footer links; fix report form

* remove React router

* Add analytics support for single page

* Add analytics support for single page

* Remove unecessary dependency

* fixes login/logout flow + uses correct google analytics

* adds new env variable

* adds conditional map render depending on env + uri params

* adds env variable to webpack

* fixes renamed const issue

* removed unused constant

* always show header/footer on share embed + change header link on share embed

* removes map iframe

* removes blank when no footer

* changes embed modal styles to maintain same size

* Update README.md

* Remove additional elements on embed

* adds embed footer styles

* Link embed to map url

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
   "globals": {
     "google": true,
     "cartodb": true,
-    "EMBED_MAP_URL": true,
+    "MAP_URL": true,
     "MAP_API_ENDPOINT": true,
     "BLOG_URL": true,
     "SITE_URL": true,
@@ -18,6 +18,7 @@
     "LOCAL_WORKSPACE": true,
     "DISABLE_WELCOME_MODAL": true,
     "WELCOME_MODAL_COOKIE_KEY": true,
+    "COMPLETE_MAP_RENDER": true,
     "TIMEBAR_DATA_URL": true
   },
   "parserOptions": {
