--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ GOOGLE_API_KEY=XXXXXXXX-XX
 NODE_ENV=development
 AUTH_USER=
 AUTH_PASSWORD=
-EMBED_MAP_URL=
+MAP_URL=
 MAP_API_ENDPOINT=https://api-dot-world-fishing-827.appspot.com
 SITE_URL=http://globalfishingwatch.org/
 BLOG_URL=http://blog.globalfishingwatch.org/
@@ -13,4 +13,5 @@ DEFAULT_WORKSPACE=vizzuality-gfw-integration-default_v1.json
 LOCAL_WORKSPACE=/workspace.json
 DISABLE_WELCOME_MODAL=false
 WELCOME_MODAL_COOKIE_KEY=
+COMPLETE_MAP_RENDER=
 TIMEBAR_DATA_URL=
