Add config variable for share URL

--- a/.env.sample
+++ b/.env.sample
@@ -14,4 +14,5 @@ LOCAL_WORKSPACE=/workspace.json
 DISABLE_WELCOME_MODAL=false
 WELCOME_MODAL_COOKIE_KEY=
 COMPLETE_MAP_RENDER=
+SHARE_BASE_URL=
 TIMEBAR_DATA_URL=
