--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "DISABLE_WELCOME_MODAL": true,
     "WELCOME_MODAL_COOKIE_KEY": true,
     "COMPLETE_MAP_RENDER": true,
+    "SHARE_BASE_URL": true,
     "TIMEBAR_DATA_URL": true
   },
   "parserOptions": {
