Add support for versioned api endpoints

--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,7 @@ NODE_ENV=development
 AUTH_USER=
 AUTH_PASSWORD=
 MAP_URL=
-MAP_API_ENDPOINT=https://api-dot-world-fishing-827.appspot.com
+V2_API_ENDPOINT=https://api-dot-world-fishing-827.appspot.com/v1
 SITE_URL=http://globalfishingwatch.org/
 BLOG_URL=http://blog.globalfishingwatch.org/
 REQUIRE_MAP_LOGIN=true
