--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "moment": "^2.14.1",
     "node-sass": "^3.7.0",
     "pixi.js": "^4.5.0",
+    "platform": "^1.3.4",
     "postcss-loader": "^1.1.0",
     "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
