dismissable legacy banner

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,4 @@ WELCOME_MODAL_COOKIE_KEY=
 COMPLETE_MAP_RENDER=
 SHARE_BASE_URL=
 TIMEBAR_DATA_URL=
+BANNER=You are viewing a new version of the map. <a href="http://globalfishingwatch.org/map">See legacy map</a>.
