moved banner content to literals.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
     "COMPLETE_MAP_RENDER": true,
     "SHARE_BASE_URL": true,
     "TIMEBAR_DATA_URL": true,
-    "BANNER": true
+    "SHOW_BANNER": true
   },
   "parserOptions": {
     "ecmaVersion": 7,
