--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app",
     "lint:js": "npm run lint-js",
     "build": "webpack --config ./config/webpack.config.js --progress --profile --colors",
-    "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer",
-    "postinstall": "npm run build"
+    "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer"
   },
   "repository": {
     "type": "git",
@@ -63,12 +62,12 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "css-loader": "^0.23.1",
-    "eslint": "^3.14.0",
-    "eslint-config-airbnb": "^14.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.19.0",
     "image-webpack-loader": "^2.0.0",
@@ -80,9 +79,9 @@
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.3.7",
-    "webpack-dev-middleware": "^1.9.0",
+    "webpack": "^1.13.0",
     "webpack-bundle-size-analyzer": "^2.6.0",
-    "webpack": "^1.13.0"
+    "webpack-dev-middleware": "^1.9.0"
   },
   "engines": {
     "node": "5.10.x",
