--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "sass-lint": "^1.10.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
-    "svg-react-loader": "^0.3.7",
+    "svg-react-loader": "^0.4.0-beta.2",
     "webpack": "^1.13.0",
     "webpack-bundle-size-analyzer": "^2.6.0",
     "webpack-dev-middleware": "^1.9.0"
