--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "platform": "^1.3.4",
     "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
+    "prop-types": "^15.5.10",
     "react": "^15.2.0",
     "react-addons-create-fragment": "^15.3.0",
     "react-datepicker": "^0.46.0",
