Loads the html template through html loader
This allows us to properly resolve html-linked resources such as
favicons throuhg webpack, so that cache busting works properly. In
addition to this, the public path for all resources is now
configurable, to allow us greater flexibility when hosting the app
through reverse proxies and such.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.19.0",
     "image-webpack-loader": "^2.0.0",
     "iso-3166-1-alpha-2": "^1.0.0",
