--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.19.0",
     "image-webpack-loader": "^2.0.0",
     "morgan": "^1.7.0",
