--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "moment": "^2.14.1",
     "pixi.js": "^4.5.0",
     "platform": "^1.3.4",
+    "preact": "^8.2.1",
+    "preact-compat": "^3.16.0",
     "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
