Remove react dependency, update code to depend on preact instead

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "iso-3166-1-alpha-2": "^1.0.0",
+    "linkref": "^1.0.1",
     "lodash": "^4.17.4",
     "moment": "^2.14.1",
     "pixi.js": "^4.5.0",
@@ -42,10 +43,8 @@
     "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
-    "react": "^15.2.0",
     "react-addons-create-fragment": "^15.3.0",
     "react-datepicker": "^0.46.0",
-    "react-dom": "^15.0.2",
     "react-ga": "^2.1.2",
     "react-google-maps": "^4.11.0",
     "react-input-range": "^0.9.3",
