--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-paginate": "^4.1.1",
     "react-redux": "^4.4.5",
     "react-responsive": "^1.2.6",
-    "react-sanfona": "daviferreira/react-sanfona#086ef6dd3db5fa8b6cc357e9d9c580fce4053c17",
+    "react-sanfona": "^0.2.3",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "webpack-bundle-analyzer": "^2.8.1",
