--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "d3": "^4.9.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "geojson-vt": "^2.4.0",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.14.1",
