--- a/package.json
+++ b/package.json
@@ -26,31 +26,30 @@
   },
   "homepage": "https://github.com/Vizzuality/GlobalFishingWatch#readme",
   "dependencies": {
-    "body-parser": "^1.15.1",
+    "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
-    "d3": "^4.9.1",
-    "dotenv": "^2.0.0",
+    "d3": "^4.10.0",
+    "dotenv": "^4.0.0",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
-    "moment": "^2.14.1",
-    "pixi.js": "^4.5.0",
+    "moment": "^2.18.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "pixi.js": "^4.5.4",
     "platform": "^1.3.4",
-    "preact": "^8.2.1",
-    "preact-compat": "^3.16.0",
-    "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
     "react-addons-create-fragment": "^15.3.0",
     "react-day-picker": "^6.1.0",
-    "react-ga": "^2.1.2",
-    "react-input-range": "^0.9.3",
-    "react-paginate": "^4.1.1",
-    "react-redux": "^4.4.5",
-    "react-responsive": "^1.2.6",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
-    "webpack-bundle-analyzer": "^2.8.1",
-    "whatwg-fetch": "^1.0.0"
+    "react-ga": "^2.2.0",
+    "react-input-range": "^1.2.1",
+    "react-paginate": "^4.4.3",
+    "react-redux": "^5.0.6",
+    "react-responsive": "^1.3.4",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.2",
@@ -74,6 +73,7 @@
     "morgan": "^1.7.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.1.0",
+    "pretty-error": "^2.1.0",
     "resolve-url-loader": "1.6.0",
     "sass-lint": "^1.10.2",
     "sass-loader": "^4.1.1",
