--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "lint-sass": "sass-lint -v -q",
     "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app",
     "lint:js": "npm run lint-js",
-    "build": "webpack -p --config ./config/webpack.config.js --progress --profile --colors",
-    "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer",
-    "postinstall": "npm run build"
+    "build": "webpack --config ./config/webpack.config.js --progress --profile --colors",
+    "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer"
   },
   "repository": {
     "type": "git",
@@ -48,17 +47,16 @@
     "react-responsive": "^1.3.4",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "webpack-bundle-analyzer": "^2.9.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-exponentiation-operator": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "css-loader": "^0.23.1",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-webpack": "^0.8.1",
@@ -66,22 +64,24 @@
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
     "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.19.0",
-    "image-webpack-loader": "^2.0.0",
-    "morgan": "^1.7.0",
-    "node-sass": "^4.5.0",
-    "postcss-loader": "^1.1.0",
-    "pretty-error": "^2.1.0",
-    "resolve-url-loader": "1.6.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.3.1",
+    "morgan": "^1.8.2",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "pretty-error": "^2.1.1",
+    "resolve-url-loader": "^2.1.0",
     "sass-lint": "^1.10.2",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "svg-react-loader": "^0.4.0-beta.2",
-    "webpack": "^1.13.0",
-    "webpack-bundle-size-analyzer": "^2.6.0",
-    "webpack-dev-middleware": "^1.9.0"
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "svg-react-loader": "^0.4.4",
+    "webpack": "^2.7.0",
+    "webpack-bundle-analyzer": "^1.5.3",
+    "webpack-bundle-size-analyzer": "^2.7.0",
+    "webpack-dev-middleware": "^1.12.0"
   },
   "engines": {
     "node": "8.2.x",
