--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-exponentiation-operator": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
@@ -68,6 +70,7 @@
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.3.1",
+    "lodash-webpack-plugin": "^0.11.4",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
