Revert Preact to React

--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "moment": "^2.14.1",
     "pixi.js": "^4.5.0",
     "platform": "^1.3.4",
-    "preact": "^8.2.1",
-    "preact-compat": "^3.16.0",
     "pretty-error": "^2.0.0",
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
+    "react": "^15.6.1",
     "react-addons-create-fragment": "^15.3.0",
     "react-datepicker": "^0.46.0",
+    "react-dom": "^15.6.1",
     "react-ga": "^2.1.2",
     "react-input-range": "^0.9.3",
     "react-paginate": "^4.1.1",
