--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
