--- a/.eslintrc
+++ b/.eslintrc
@@ -6,24 +6,25 @@
     "es6": true
   },
   "globals": {
-    "google": true,
-    "cartodb": true,
-    "MAP_URL": true,
-    "V2_API_ENDPOINT": true,
     "BLOG_URL": true,
-    "SITE_URL": true,
-    "DEFAULT_WORKSPACE": true,
-    "REQUIRE_MAP_LOGIN": true,
-    "GA_TRACKING_CODE": true,
-    "LOCAL_WORKSPACE": true,
-    "DISABLE_WELCOME_MODAL": true,
-    "WELCOME_MODAL_COOKIE_KEY": true,
+    "cartodb": true,
     "COMPLETE_MAP_RENDER": true,
-    "SHARE_BASE_URL": true,
-    "TIMEBAR_DATA_URL": true,
-    "SHOW_BANNER": true,
+    "DEFAULT_WORKSPACE": true,
+    "DISABLE_WELCOME_MODAL": true,
     "ENABLE_AREA_OF_INTEREST": true,
-    "PUBLIC_PATH": true
+    "ENABLE_FILTER_GROUPS": true,
+    "GA_TRACKING_CODE": true,
+    "google": true,
+    "LOCAL_WORKSPACE": true,
+    "MAP_URL": true,
+    "PUBLIC_PATH": true,
+    "REQUIRE_MAP_LOGIN": true,
+    "SHARE_BASE_URL": true,
+    "SHOW_BANNER": true,
+    "SITE_URL": true,
+    "TIMEBAR_DATA_URL": true,
+    "V2_API_ENDPOINT": true,
+    "WELCOME_MODAL_COOKIE_KEY": true
   },
   "parserOptions": {
     "ecmaVersion": 7,
