--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app",
     "lint-sass": "sass-lint -v -q",
     "lint:js": "npm run lint-js",
-    "server": "npm run build && npm start",
+    "postinstall": "npm run build",
     "test": "npm run lint-js && npm run lint-sass"
   },
   "repository": {
