--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "velocity-react": "^1.3.3",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
