Revert "Merge branch 'develop' into master"
This reverts commit 4aece5fd6b89ea8c0905cc50616f89aee9bd9a57, reversing
changes made to 3a1d83023ef754d6b7e8175727ec89b495d39881.

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "DEFAULT_WORKSPACE": true,
     "DISABLE_WELCOME_MODAL": true,
     "ENABLE_AREA_OF_INTEREST": true,
+    "ENABLE_FILTER_GROUPS": true,
     "GA_TRACKING_CODE": true,
     "google": true,
     "LOCAL_WORKSPACE": true,
