Mapbox GL JS / react-map-gl

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 PORT=3000
 GOOGLE_API_KEY=XXXXXXXX-XX
+MAPBOX_TOKEN=pk...
 NODE_ENV=development
 MAP_URL=
 V2_API_ENDPOINT=https://api-dot-world-fishing-827.appspot.com/v2
