--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "react"],
-  "plugins": ["transform-exponentiation-operator"]
+  "presets": ["react", "es2015", "es2016", "es2017"],
+  "plugins": ["transform-object-rest-spread", "transform-class-properties", "transform-exponentiation-operator", "lodash"]
 }
