--- a/package.json
+++ b/package.json
@@ -29,19 +29,21 @@
     "classnames": "^2.2.5",
     "d3": "^4.10.0",
     "dotenv": "^4.0.0",
+    "globalfishingwatch-convert": "git+https://github.com/GlobalFishingWatch/map-convert.git",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "pbf": "^3.1.0",
-    "pixi.js": "^4.5.4",
+    "pixi.js": "^4.7.1",
     "platform": "^1.3.4",
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "react": "15.6.1",
     "react-datepicker": "^0.46.0",
     "react-dom": "^15.6.1",
     "react-ga": "^2.2.0",
     "react-input-range": "^1.2.1",
+    "react-map-gl": "3.2.4",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
@@ -52,17 +54,21 @@
     "topojson-client": "^3.0.0",
     "vector-tile": "^1.3.0",
     "velocity-react": "^1.3.3",
-    "whatwg-fetch": "^2.0.3",
-    "globalfishingwatch-convert": "git+https://github.com/GlobalFishingWatch/map-convert.git"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-exponentiation-operator": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.4.1",
