reimplemented zoom-to-track

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@mapbox/tile-cover": "^3.0.2",
     "@turf/area": "^6.0.1",
+    "@turf/helpers": "^6.0.1",
+    "@turf/bbox": "^6.0.1",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "d3": "^4.10.0",
