use satellite basemap defined in env vars

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,5 @@ SHARE_BASE_URL=
 TIMEBAR_DATA_URL=https://storage.googleapis.com/world-fishing-827/pelagos/data/vizzuality-map-resources/timebar
 SHOW_BANNER=true
 USE_SUBSCRIPTIONS=true
+SATELLITE_BASEMAP_URL=http://{s}.tile.stamen.com/watercolor/{z}/{x}/{y}.jpg
+
