clean up env variables

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "COMPLETE_MAP_RENDER": true,
     "DEFAULT_WORKSPACE": true,
     "DISABLE_WELCOME_MODAL": true,
-    "USE_SUBSCRIPTIONS": true,
+    "FEATURE_FLAG_SUBSCRIPTIONS": true,
     "GA_TRACKING_CODE": true,
     "LOCAL_WORKSPACE": true,
     "MAP_URL": true,
