hide new polygon features undef feature flag

--- a/.env.sample
+++ b/.env.sample
@@ -17,4 +17,5 @@ TIMEBAR_DATA_URL=https://storage.googleapis.com/world-fishing-827/pelagos/data/v
 SHOW_BANNER=true
 SATELLITE_BASEMAP_URL=http://{s}.tile.stamen.com/watercolor/{z}/{x}/{y}.jpg
 FEATURE_FLAG_SUBSCRIPTIONS=true
+FEATURE_FLAG_EXTENDED_POLYGON_LAYERS=true
 
