--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "immutable": "^3.8.2",
     "iso-3166-1-alpha-2": "^1.0.0",
     "lodash": "^4.17.4",
-    "mapbox-gl": "^0.45.0",
+    "mapbox-gl": "^0.46.0",
     "moment": "^2.18.1",
     "pbf": "^3.1.0",
     "pixi.js": "^4.7.1",
@@ -51,7 +51,7 @@
     "react-dom": "^15.6.1",
     "react-ga": "^2.2.0",
     "react-input-range": "^1.2.1",
-    "react-map-gl": "3.2.4",
+    "react-map-gl": "^3.2.6",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
