removed dev URLs from .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -10,8 +10,8 @@ REQUIRE_MAP_LOGIN=false
 SHOW_BANNER=false
 GA_TRACKING_CODE=UA-XXXXXXXX-X
 WELCOME_MODAL_COOKIE_KEY=welcome_pop_up_v2
-TIMEBAR_DATA_URL=https://storage.googleapis.com/world-fishing-827/pelagos/data/vizzuality-map-resources/timebar
-V2_API_ENDPOINT=https://api-dot-skytruth-pleuston.appspot.com/v2
+TIMEBAR_DATA_URL=
+V2_API_ENDPOINT=
 MAP_URL=
 SITE_URL=http://globalfishingwatch.org/
 BLOG_URL=http://blog.globalfishingwatch.org/
