set retrieve workspace script to *post* install

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint-sass": "sass-lint -v -q",
     "lint:js": "npm run lint-js",
     "retrieve-workspace": "node ./bin/retrieve-workspace.js",
-    "preinstall": "npm run retrieve-workspace",
+    "postinstall": "npm run retrieve-workspace",
     "test": "npm run lint-js && npm run lint-sass"
   },
   "repository": {
