--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,41 +3,9 @@
     "jsx": "react",
     "target": "ES6",
     "allowSyntheticDefaultImports": false,
-    "baseUrl": "./app",
+    "baseUrl": "./src",
     "paths": {
-      "styles/*": ["./styles"],
-      "app/*": ["./src/app"],
-      "analytics/*": ["./src/analytics"],
-      "basemap/*": ["./src/basemap"],
-      "filters/*": ["./src/filters"],
-      "encounters/*": ["./src/encounters"],
-      "layers/*": ["./src/layers"],
-      "leftControlPanel/*": ["./src/leftControlPanel"],
-      "rightControlPanel/*": ["./src/rightControlPanel"],
-      "miniglobe/*": ["./src/miniglobe"],
-      "map/*": ["./src/map"],
-      "mapPanels/*": ["./src/mapPanels"],
-      "pinnedVessels/*": ["./src/pinnedVessels"],
-      "recentVessels/*": ["./src/recentVessels"],
-      "vessels/*": ["./src/vessels"],
-      "vesselInfo/*": ["./src/vesselInfo"],
-      "fleets/*": ["./src/fleets"],
-      "report/*": ["./src/report"],
-      "search/*": ["./src/search"],
-      "share/*": ["./src/share"],
-      "sharedUI/*": ["./src/sharedUI"],
-      "siteNav/*": ["./src/siteNav"],
-      "timebar/*": ["./src/timebar"],
-      "tracks/*": ["./src/tracks"],
-      "user/*": ["./src/user"],
-      "welcomeModal/*": ["./src/welcomeModal"],
-      "workspace/*": ["./src/workspace"],
-      "components/*": ["./src/components"],
-      "config/*": ["src/./config.js"],
-      "constants/*": ["src/./constants.js"],
-      "containers/*": ["./src/containers"],
-      "utils/*": ["./src/util"],
-      "activityLayers/*": ["./src/activityLayer"]
+      "app/*": ["./src/app"]
     }
   },
   "exclude": ["node_modules"] // keep VS Code from slowing down by searching node_modules
