--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,42 @@
-# Mac OS
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
+
+# ENV variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Text editors
 *.sublime*
 .sublime*
 .idea/
 
-# Vendors
-/node_modules
-
 # Logs
 *.log*
-
-# ENV variables
-.env
 
 # Compiled files
 /dist
 
+# Tiles
 bin/*.csv
 
 # Test workspaces
