--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "@globalfishingwatch/map-client",
-  "version": "3.0.0",
+  "name": "map-client",
+  "version": "2.1.0",
   "description": "This repository hosts the Global Fishing Watch client application.",
-  "main": "server.js",
+  "private": false,
   "scripts": {
-    "analyze-bundle": "webpack --config ./config/webpack.config.js --json | webpack-bundle-size-analyzer",
-    "build": "webpack --config ./config/webpack.config.js --progress --profile --colors",
-    "build-force-prod": "NODE_ENV=production webpack --config ./config/webpack.config.js --progress --profile --colors",
-    "lint-js": "./node_modules/.bin/eslint -c .eslintrc --ext .jsx,.js app/src",
-    "lint-sass": "sass-lint -v -q",
-    "lint:js": "npm run lint-js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "serve": "http-server ./build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "retrieve-workspace": "node ./bin/retrieve-workspace.js",
-    "postinstall": "npm run retrieve-workspace",
-    "test": "npm run lint-js && npm run lint-sass"
+    "postinstall": "npm run retrieve-workspace"
   },
   "repository": {
     "type": "git",
@@ -27,6 +25,10 @@
     "url": "https://github.com/GlobalFishingWatch/map-client/issues"
   },
   "homepage": "https://github.com/GlobalFishingWatch/map-client#readme",
+  "engines": {
+    "node": "> 8.2.x",
+    "npm": "> 5.3.x"
+  },
   "dependencies": {
     "@globalfishingwatch/map-components": "1.6.0",
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
@@ -37,9 +39,9 @@
     "@turf/helpers": "^6.0.1",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
-    "dayjs": "^1.7.7",
     "d3": "^4.10.0",
     "d3-ease": "^1.0.3",
+    "dayjs": "^1.7.7",
     "dotenv": "^4.0.0",
     "immutable": "^3.8.2",
     "iso-3166-1-alpha-2": "^1.0.0",
@@ -51,15 +53,16 @@
     "platform": "^1.3.4",
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
-    "react": "^16.5.2",
+    "react": "^16.8.6",
     "react-datepicker": "^0.46.0",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.8.6",
     "react-ga": "^2.2.0",
     "react-input-range": "^1.2.1",
     "react-map-gl": "^4.0.10",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.3.4",
+    "react-scripts": "2.1.8",
     "react-select": "^1.0.0-rc.10",
     "react-tooltip": "^3.4.0",
     "redux": "^3.7.2",
@@ -74,55 +77,22 @@
     "wms-capabilities": "^0.3.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/plugin-transform-exponentiation-operator": "^7.2.0",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.2.0",
-    "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "image-webpack-loader": "^3.3.1",
-    "lodash-webpack-plugin": "^0.11.4",
-    "morgan": "^1.8.2",
-    "node-sass": "^4.9.3",
-    "postcss-loader": "^2.0.6",
-    "pretty-error": "^2.1.1",
-    "resolve-url-loader": "^2.1.0",
-    "sass-lint": "^1.10.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "svg-react-loader": "^0.4.4",
-    "webpack": "^3.5.4",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-bundle-size-analyzer": "^2.7.0",
-    "webpack-dev-middleware": "^1.12.0"
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "http-server": "^0.11.1",
+    "husky": "^1.3.1",
+    "imagemin-lint-staged": "^0.4.0",
+    "node-sass": "^4.11.0",
+    "prettier": "^1.16.4",
+    "stylelint": "^9.10.1",
+    "stylelint-config-standard": "^18.2.0"
   },
-  "engines": {
-    "node": "> 8.2.x",
-    "npm": "> 5.3.x"
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "Firefox ESR",
+    "Safari >= 8",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
