Move translations feature to env variable

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,7 @@ DEFAULT_WORKSPACE=
 WORKSPACE_API_URL=
 
 REACT_APP_FEATURE_FLAG_SUBSCRIPTIONS=
+REACT_APP_FEATURE_TRANSLATIONS=
 REACT_APP_COMPLETE_MAP_RENDER=
 REACT_APP_LOCAL_WORKSPACE=
 REACT_APP_DISABLE_WELCOME_MODAL=
