Avoid run prettier twice

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
-  "extends": ["prettier", "react-app"],
-  "plugins": ["prettier"],
+  "extends": ["react-app", "plugin:prettier/recommended"],
+  "plugins": ["react"],
   "rules": {
     "prettier/prettier": "error",
     "react/prop-types": "error",
