Update cra scripts to remove node_path

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,5 +8,6 @@
       "app/*": ["./src/app"]
     }
   },
-  "exclude": ["node_modules"] // keep VS Code from slowing down by searching node_modules
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
