Use satellite-eslint-config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,3 @@
 {
-  "extends": ["react-app", "plugin:prettier/recommended"],
-  "plugins": ["react"],
-  "rules": {
-    "prettier/prettier": "error",
-    "react/prop-types": "error",
-    "react/require-default-props": "error"
-  }
+  "extends": "@satellitestudio/eslint-config"
 }
