added homepage field to package.json

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": "> 8.2.x",
     "npm": "> 5.3.x"
   },
+  "homepage": ".",
   "dependencies": {
     "@globalfishingwatch/map-components": "1.7.3",
     "@globalfishingwatch/map-convert": "github:GlobalFishingWatch/map-convert",
