update path to use legacy-map

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,12 +21,12 @@ http {
         listen ${PORT};
         root /usr/share/nginx/www/;
 
-        location ~* ^/map/(.+\..+)$ {
+        location ~* ^/legacy-map/(.+\..+)$ {
           alias /usr/share/nginx/www/$1;
           add_header Set-Cookie "welcome_pop_up_v6=https://storage.googleapis.com/world-fishing-827/pelagos/site-pop-ups/20200303-chile-release/chile-release.html;";
         }
 
-        location /map {
+        location /legacy-map {
           auth_basic ${BASIC_AUTH};
           auth_basic_user_file /etc/nginx/.htpasswd;
           index  index.html index.htm;
